Fixed momentum code

--- a/models/baseline_model.ipynb
+++ b/models/baseline_model.ipynb
@@ -18,16 +18,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -52,7 +43,7 @@
    "outputs": [],
    "source": [
     "train = pd.read_csv('../data/cleaned/train_final.csv')\n",
-    "test = pd.read_csv('../data/cleaned/test_final.csv')"
+    "test = pd.read_csv('../data/cleaned/test_final.csv')\n"
    ]
   },
   {
@@ -63,21 +54,27 @@
     {
      "data": {
       "text/plain": [
-       "Index(['game_date', 'home_team', 'away_team', 'country', 'neutral', 'home_win',\n",
-       "       'attack_diff', 'bup_dribbling_diff', 'bup_passing_diff',\n",
-       "       'bup_speed_diff', 'cc_crossing_diff', 'cc_passing_diff',\n",
-       "       'cc_shooting_diff', 'd_aggresion_diff', 'd_pressure_diff',\n",
-       "       'd_width_diff', 'defence_diff', 'full_age_diff',\n",
-       "       'goalkeeeper_overall_diff', 'growth_diff', 'midfield_diff',\n",
-       "       'overall_diff', 'prestige_diff', 'start_age_diff',\n",
-       "       'value_euros_millions_diff', 'wage_euros_thousands_diff',\n",
-       "       'attack_home_defence_away_diff', 'attack_away_defence_home_diff',\n",
-       "       'rank_diff', 'gdp_diff', 'wins_past_1_games_diff',\n",
-       "       'wins_home_against_away_1_games', 'wins_past_2_games_diff',\n",
-       "       'wins_home_against_away_2_games', 'wins_past_3_games_diff',\n",
-       "       'wins_home_against_away_3_games', 'wins_past_4_games_diff',\n",
-       "       'wins_home_against_away_4_games', 'wins_past_5_games_diff',\n",
-       "       'wins_home_against_away_5_games'],\n",
+       "Index(['game_date', 'home_team', 'away_team', 'home_score', 'away_score',\n",
+       "       'tournament', 'country', 'neutral', 'overall_diff',\n",
+       "       'attack_away_defence_home_diff', 'attack_diff',\n",
+       "       'attack_home_defence_away_diff', 'defence_diff', 'midfield_diff',\n",
+       "       'rank_diff', 'prestige_diff', 'growth_diff', 'full_age_diff',\n",
+       "       'start_age_diff', 'value_euros_millions_diff',\n",
+       "       'wage_euros_thousands_diff', 'goalkeeper_overall_diff',\n",
+       "       'bup_dribbling_diff', 'bup_passing_diff', 'bup_speed_diff',\n",
+       "       'cc_crossing_diff', 'cc_passing_diff', 'cc_shooting_diff',\n",
+       "       'd_aggresion_diff', 'd_pressure_diff', 'd_width_diff', 'home_win',\n",
+       "       'gdp_diff', 'is_home', 'raw_gdp_diff', 'score_past_3_games_diff',\n",
+       "       'wins_past_5_games_diff', 'wins_home_against_away_3_games',\n",
+       "       'score_past_4_games_diff', 'wins_home_against_away_1_games',\n",
+       "       'score_past_5_games_diff', 'score_conceded_past_1_games_diff',\n",
+       "       'wins_past_4_games_diff', 'wins_past_2_games_diff',\n",
+       "       'wins_home_against_away_5_games', 'wins_past_1_games_diff',\n",
+       "       'wins_home_against_away_4_games', 'score_past_1_games_diff',\n",
+       "       'wins_past_3_games_diff', 'score_conceded_past_4_games_diff',\n",
+       "       'score_conceded_past_5_games_diff', 'score_past_2_games_diff',\n",
+       "       'wins_home_against_away_2_games', 'score_conceded_past_3_games_diff',\n",
+       "       'score_conceded_past_2_games_diff'],\n",
        "      dtype='object')"
       ]
      },
@@ -91,6 +88,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['game_date', 'home_team', 'away_team', 'home_score', 'away_score',\n",
+       "       'tournament', 'country', 'neutral', 'overall_diff',\n",
+       "       'attack_away_defence_home_diff', 'attack_diff',\n",
+       "       'attack_home_defence_away_diff', 'defence_diff', 'midfield_diff',\n",
+       "       'rank_diff', 'prestige_diff', 'growth_diff', 'full_age_diff',\n",
+       "       'start_age_diff', 'value_euros_millions_diff',\n",
+       "       'wage_euros_thousands_diff', 'goalkeeper_overall_diff',\n",
+       "       'bup_dribbling_diff', 'bup_passing_diff', 'bup_speed_diff',\n",
+       "       'cc_crossing_diff', 'cc_passing_diff', 'cc_shooting_diff',\n",
+       "       'd_aggresion_diff', 'd_pressure_diff', 'd_width_diff', 'home_win',\n",
+       "       'home_win_no_pk', 'Group', 'gdp_diff', 'is_home', 'raw_gdp_diff',\n",
+       "       'score_past_3_games_diff', 'wins_past_5_games_diff',\n",
+       "       'wins_home_against_away_3_games', 'score_past_4_games_diff',\n",
+       "       'wins_home_against_away_1_games', 'score_past_5_games_diff',\n",
+       "       'score_conceded_past_1_games_diff', 'wins_past_4_games_diff',\n",
+       "       'wins_past_2_games_diff', 'wins_home_against_away_5_games',\n",
+       "       'wins_past_1_games_diff', 'wins_home_against_away_4_games',\n",
+       "       'score_past_1_games_diff', 'wins_past_3_games_diff',\n",
+       "       'score_conceded_past_4_games_diff', 'score_conceded_past_5_games_diff',\n",
+       "       'score_past_2_games_diff', 'wins_home_against_away_2_games',\n",
+       "       'score_conceded_past_3_games_diff', 'score_conceded_past_2_games_diff'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.columns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -99,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +146,7 @@
        "0.43806009488666314"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +173,7 @@
        "0.421875"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,11 +203,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(3)\n",
+    "np.random.seed(10)\n",
     "X_train, X_validation = train_test_split(train, test_size = 0.2)\n",
     "y_train = X_train['home_win'].ravel()\n",
     "X_train = X_train.drop(['home_win'], axis = 1)\n",
@@ -180,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,15 +244,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Train Score: 0.5260382333553065\n",
-      "Logistic Regression Validation Score: 0.4921052631578947\n"
+      "Logistic Regression Train Score: 0.5102175346077785\n",
+      "Logistic Regression Validation Score: 0.5710526315789474\n"
      ]
     }
    ],
@@ -237,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +351,7 @@
        " 1        936.866455    49.295727     43.509512      42.634416     37.105145"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,15 +378,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LDA Train Score: 0.5227422544495716\n",
-      "LDA Validation Score: 0.5026315789473684\n"
+      "LDA Train Score: 0.5042847725774555\n",
+      "LDA Validation Score: 0.5710526315789474\n"
      ]
     }
    ],
@@ -370,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,15 +417,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QDA Train Score: 0.5280158206987475\n",
-      "QDA Validation Score: 0.48947368421052634\n"
+      "QDA Train Score: 0.5049439683586026\n",
+      "QDA Validation Score: 0.5552631578947368\n"
      ]
     }
    ],
@@ -409,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -423,9 +461,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done  52 tasks      | elapsed:    2.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 227 tasks      | elapsed:   15.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   18.0s finished\n"
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    7.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   29.7s\n",
+      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   36.1s finished\n"
      ]
     }
    ],
@@ -443,15 +482,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Train Score: 0.5451549110085695\n",
-      "Random Forest Validation Score 0.4921052631578947\n"
+      "Random Forest Train Score: 0.5154911008569545\n",
+      "Random Forest Validation Score 0.5657894736842105\n"
      ]
     }
    ],
@@ -473,9 +512,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -487,9 +533,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done  34 tasks      | elapsed:    1.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 184 tasks      | elapsed:    8.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   10.8s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    3.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   14.4s\n",
+      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   18.6s finished\n"
      ]
     }
    ],
@@ -507,15 +553,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost Train Score: 0.5451549110085695\n",
-      "XGBoost Validation Score 0.4921052631578947\n"
+      "XGBoost Train Score: 0.5154911008569545\n",
+      "XGBoost Validation Score 0.5657894736842105\n"
      ]
     }
    ],
@@ -530,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -571,33 +617,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.526038</td>\n",
-       "      <td>0.492105</td>\n",
+       "      <td>0.510218</td>\n",
+       "      <td>0.571053</td>\n",
        "      <td>LogisticRegressionCV(Cs=10, class_weight=None,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LDA</th>\n",
-       "      <td>0.522742</td>\n",
-       "      <td>0.502632</td>\n",
+       "      <td>0.504285</td>\n",
+       "      <td>0.571053</td>\n",
        "      <td>LinearDiscriminantAnalysis(n_components=None, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>QDA</th>\n",
-       "      <td>0.528016</td>\n",
-       "      <td>0.489474</td>\n",
+       "      <td>0.504944</td>\n",
+       "      <td>0.555263</td>\n",
        "      <td>QuadraticDiscriminantAnalysis(priors=None, reg...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.545155</td>\n",
-       "      <td>0.492105</td>\n",
-       "      <td>RandomizedSearchCV(cv=5, error_score='raise',\\...</td>\n",
+       "      <td>0.515491</td>\n",
+       "      <td>0.565789</td>\n",
+       "      <td>RandomizedSearchCV(cv=5, error_score='raise-de...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>XGBoost</th>\n",
-       "      <td>0.550428</td>\n",
-       "      <td>0.497368</td>\n",
-       "      <td>RandomizedSearchCV(cv=5, error_score='raise',\\...</td>\n",
+       "      <td>0.512195</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>RandomizedSearchCV(cv=5, error_score='raise-de...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -605,46 +651,27 @@
       ],
       "text/plain": [
        "                    Train Score Validation Score  \\\n",
-       "Logistic Regression    0.526038         0.492105   \n",
-       "LDA                    0.522742         0.502632   \n",
-       "QDA                    0.528016         0.489474   \n",
-       "Random Forest          0.545155         0.492105   \n",
-       "XGBoost                0.550428         0.497368   \n",
+       "Logistic Regression    0.510218         0.571053   \n",
+       "LDA                    0.504285         0.571053   \n",
+       "QDA                    0.504944         0.555263   \n",
+       "Random Forest          0.515491         0.565789   \n",
+       "XGBoost                0.512195             0.55   \n",
        "\n",
        "                                                                 model  \n",
        "Logistic Regression  LogisticRegressionCV(Cs=10, class_weight=None,...  \n",
        "LDA                  LinearDiscriminantAnalysis(n_components=None, ...  \n",
        "QDA                  QuadraticDiscriminantAnalysis(priors=None, reg...  \n",
-       "Random Forest        RandomizedSearchCV(cv=5, error_score='raise',\\...  \n",
-       "XGBoost              RandomizedSearchCV(cv=5, error_score='raise',\\...  "
+       "Random Forest        RandomizedSearchCV(cv=5, error_score='raise-de...  \n",
+       "XGBoost              RandomizedSearchCV(cv=5, error_score='raise-de...  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "We choose the final model to be the one with the highest validation score, which is LDA in this case\n"
-     ]
-    }
-   ],
-   "source": [
-    "model_name = df_result['Validation Score'].astype(float).argmax()\n",
-    "print(\"We choose the final model to be the one with the highest validation score,\\\n",
-    " which is {} in this case\".format(model_name))"
    ]
   },
   {
@@ -656,13 +683,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For the best Model, LDA, the test accuracy is 0.594\n"
+      "We choose the final model to be the one with the highest validation score, which is Logistic Regression in this case\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = df_result['Validation Score'].astype(float).argmax()\n",
+    "print(\"We choose the final model to be the one with the highest validation score,\\\n",
+    " which is {} in this case\".format(model_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For the best Model, Logistic Regression, the test accuracy is 0.609\n"
      ]
     }
    ],
    "source": [
     "test_pred = predict_test_data(test, X_train.columns, df_result.loc[model_name].model)\n",
-    "test_score = accuracy_score(test['home_win'], test_pred)\n",
+    "test_score = accuracy_score(y_test, test_pred)\n",
     "print(\"For the best Model, {}, the test accuracy is {:.3f}\".format(model_name, test_score))"
    ]
   },
@@ -672,6 +718,13 @@
    "source": [
     "Impressive! We now have an idea of what our more advanced model should hope to achieve. \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -690,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
