--- a/sofifa/GDP_features.ipynb
+++ b/sofifa/GDP_features.ipynb
@@ -317,8 +317,8 @@
        " 'Antarctica',\n",
        " 'Asia',\n",
        " 'Europe',\n",
-       " 'America',\n",
-       " 'North America',\n",
+       " 'American',\n",
+       " 'North',\n",
        " 'Central America and the Antilles',\n",
        " 'South America',\n",
        " 'Oceania',\n",
@@ -1377,7 +1377,7 @@
        "      <th>50</th>\n",
        "      <td>Russia</td>\n",
        "      <td>Spain</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1525,7 +1525,7 @@
        "47         England         Belgium        -1        0\n",
        "48          France       Argentina         1        1\n",
        "49         Uruguay        Portugal         1       -1\n",
-       "50          Russia           Spain        -1        1\n",
+       "50          Russia           Spain         1        1\n",
        "51         Croatia         Denmark         1        0\n",
        "52          Brazil          Mexico         1        0\n",
        "53         Belgium           Japan         1        1\n",
@@ -1561,6 +1561,20 @@
     "train.to_csv('../data/train_gdp.csv', index = False)\n",
     "test.to_csv('../data/test_gdp.csv', index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
