--- a/sofifa/merge.ipynb
+++ b/sofifa/merge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert (momentum_train.index == gdp_train.index).all()"
+    "gdp_train = gdp_train.sort_values(by = 'game_date').reset_index(drop = True)\n",
+    "momentum_train  = momentum_train.sort_values(by = 'game_date').reset_index(drop = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert (momentum_train.game_date == gdp_train.game_date).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +69,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gdp_train.loc[gdp_train['tournament'] == 'Friendly', 'isFriendly'] = 1\n",
+    "# gdp_train.loc[gdp_train['tournament'] != 'Friendly', 'isFriendly'] = 0\n",
+    "# gdp_test['isFriendly'] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>game_date</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>home_score</th>\n",
+       "      <th>away_score</th>\n",
+       "      <th>tournament</th>\n",
+       "      <th>country</th>\n",
+       "      <th>neutral</th>\n",
+       "      <th>overall_diff</th>\n",
+       "      <th>attack_away_defence_home_diff</th>\n",
+       "      <th>...</th>\n",
+       "      <th>wins_past_1_games_diff</th>\n",
+       "      <th>wins_home_against_away_4_games</th>\n",
+       "      <th>score_past_1_games_diff</th>\n",
+       "      <th>wins_past_3_games_diff</th>\n",
+       "      <th>score_conceded_past_4_games_diff</th>\n",
+       "      <th>score_conceded_past_5_games_diff</th>\n",
+       "      <th>score_past_2_games_diff</th>\n",
+       "      <th>wins_home_against_away_2_games</th>\n",
+       "      <th>score_conceded_past_3_games_diff</th>\n",
+       "      <th>score_conceded_past_2_games_diff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2006-09-01 00:00:00+00:00</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Friendly</td>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2006-09-02 00:00:00+00:00</td>\n",
+       "      <td>Romania</td>\n",
+       "      <td>Bulgaria</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>UEFA Euro qualification</td>\n",
+       "      <td>Romania</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2006-09-02 00:00:00+00:00</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>Finland</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>UEFA Euro qualification</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2006-09-02 00:00:00+00:00</td>\n",
+       "      <td>Hungary</td>\n",
+       "      <td>Norway</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>UEFA Euro qualification</td>\n",
+       "      <td>Hungary</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2006-09-02 00:00:00+00:00</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>UEFA Euro qualification</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>-8.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 55 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   game_date home_team away_team  home_score  away_score  \\\n",
+       "0  2006-09-01 00:00:00+00:00   Denmark  Portugal           4           2   \n",
+       "1  2006-09-02 00:00:00+00:00   Romania  Bulgaria           2           2   \n",
+       "2  2006-09-02 00:00:00+00:00    Poland   Finland           1           3   \n",
+       "3  2006-09-02 00:00:00+00:00   Hungary    Norway           1           4   \n",
+       "4  2006-09-02 00:00:00+00:00   Germany   Ireland           1           0   \n",
+       "\n",
+       "                tournament  country  neutral  overall_diff  \\\n",
+       "0                 Friendly  Denmark    False          -3.0   \n",
+       "1  UEFA Euro qualification  Romania    False          -1.0   \n",
+       "2  UEFA Euro qualification   Poland    False          -0.0   \n",
+       "3  UEFA Euro qualification  Hungary    False          -7.0   \n",
+       "4  UEFA Euro qualification  Germany    False           8.0   \n",
+       "\n",
+       "   attack_away_defence_home_diff                ...                 \\\n",
+       "0                            3.0                ...                  \n",
+       "1                            2.0                ...                  \n",
+       "2                            4.0                ...                  \n",
+       "3                            7.0                ...                  \n",
+       "4                           -8.0                ...                  \n",
+       "\n",
+       "   wins_past_1_games_diff  wins_home_against_away_4_games  \\\n",
+       "0                     0.0                             0.0   \n",
+       "1                     0.0                             0.0   \n",
+       "2                     0.0                             0.0   \n",
+       "3                     0.0                             0.0   \n",
+       "4                     0.0                             0.0   \n",
+       "\n",
+       "   score_past_1_games_diff  wins_past_3_games_diff  \\\n",
+       "0                      0.0                     0.0   \n",
+       "1                      0.0                     0.0   \n",
+       "2                      0.0                     0.0   \n",
+       "3                      0.0                     0.0   \n",
+       "4                      0.0                     0.0   \n",
+       "\n",
+       "   score_conceded_past_4_games_diff  score_conceded_past_5_games_diff  \\\n",
+       "0                               0.0                               0.0   \n",
+       "1                               0.0                               0.0   \n",
+       "2                               0.0                               0.0   \n",
+       "3                               0.0                               0.0   \n",
+       "4                               0.0                               0.0   \n",
+       "\n",
+       "   score_past_2_games_diff  wins_home_against_away_2_games  \\\n",
+       "0                      0.0                             0.0   \n",
+       "1                      0.0                             0.0   \n",
+       "2                      0.0                             0.0   \n",
+       "3                      0.0                             0.0   \n",
+       "4                      0.0                             0.0   \n",
+       "\n",
+       "   score_conceded_past_3_games_diff  score_conceded_past_2_games_diff  \n",
+       "0                               0.0                               0.0  \n",
+       "1                               0.0                               0.0  \n",
+       "2                               0.0                               0.0  \n",
+       "3                               0.0                               0.0  \n",
+       "4                               0.0                               0.0  \n",
+       "\n",
+       "[5 rows x 55 columns]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdp_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
