--- a/models/baseline_model.ipynb
+++ b/models/baseline_model.ipynb
@@ -207,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(10)\n",
+    "np.random.seed(14)\n",
     "X_train, X_validation = train_test_split(train, test_size = 0.2)\n",
     "y_train = X_train['home_win'].ravel()\n",
     "X_train = X_train.drop(['home_win'], axis = 1)\n",
@@ -251,8 +251,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Train Score: 0.5102175346077785\n",
-      "Logistic Regression Validation Score: 0.5710526315789474\n"
+      "Logistic Regression Train Score: 0.5128543177323666\n",
+      "Logistic Regression Validation Score: 0.5684210526315789\n"
      ]
     }
    ],
@@ -385,8 +385,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LDA Train Score: 0.5042847725774555\n",
-      "LDA Validation Score: 0.5710526315789474\n"
+      "LDA Train Score: 0.5102175346077785\n",
+      "LDA Validation Score: 0.5578947368421052\n"
      ]
     }
    ],
@@ -424,8 +424,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QDA Train Score: 0.5049439683586026\n",
-      "QDA Validation Score: 0.5552631578947368\n"
+      "QDA Train Score: 0.5102175346077785\n",
+      "QDA Validation Score: 0.5368421052631579\n"
      ]
     }
    ],
@@ -462,9 +462,9 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    7.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   29.7s\n",
-      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   36.1s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    7.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   26.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   35.4s finished\n"
      ]
     }
    ],
@@ -489,8 +489,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Train Score: 0.5154911008569545\n",
-      "Random Forest Validation Score 0.5657894736842105\n"
+      "Random Forest Train Score: 0.5115359261700725\n",
+      "Random Forest Validation Score 0.5552631578947368\n"
      ]
     }
    ],
@@ -516,13 +516,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -533,9 +526,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    3.3s\n",
-      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   14.4s\n",
-      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   18.6s finished\n"
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed:    4.0s\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed:   17.3s\n",
+      "[Parallel(n_jobs=-1)]: Done 250 out of 250 | elapsed:   21.9s finished\n"
      ]
     }
    ],
@@ -560,8 +554,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost Train Score: 0.5154911008569545\n",
-      "XGBoost Validation Score 0.5657894736842105\n"
+      "XGBoost Train Score: 0.5115359261700725\n",
+      "XGBoost Validation Score 0.5552631578947368\n"
      ]
     }
    ],
@@ -617,32 +611,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Logistic Regression</th>\n",
-       "      <td>0.510218</td>\n",
-       "      <td>0.571053</td>\n",
+       "      <td>0.512854</td>\n",
+       "      <td>0.568421</td>\n",
        "      <td>LogisticRegressionCV(Cs=10, class_weight=None,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LDA</th>\n",
-       "      <td>0.504285</td>\n",
-       "      <td>0.571053</td>\n",
+       "      <td>0.510218</td>\n",
+       "      <td>0.557895</td>\n",
        "      <td>LinearDiscriminantAnalysis(n_components=None, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>QDA</th>\n",
-       "      <td>0.504944</td>\n",
-       "      <td>0.555263</td>\n",
+       "      <td>0.510218</td>\n",
+       "      <td>0.536842</td>\n",
        "      <td>QuadraticDiscriminantAnalysis(priors=None, reg...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Random Forest</th>\n",
-       "      <td>0.515491</td>\n",
-       "      <td>0.565789</td>\n",
+       "      <td>0.511536</td>\n",
+       "      <td>0.555263</td>\n",
        "      <td>RandomizedSearchCV(cv=5, error_score='raise-de...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>XGBoost</th>\n",
-       "      <td>0.512195</td>\n",
-       "      <td>0.55</td>\n",
+       "      <td>0.509558</td>\n",
+       "      <td>0.557895</td>\n",
        "      <td>RandomizedSearchCV(cv=5, error_score='raise-de...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -651,11 +645,11 @@
       ],
       "text/plain": [
        "                    Train Score Validation Score  \\\n",
-       "Logistic Regression    0.510218         0.571053   \n",
-       "LDA                    0.504285         0.571053   \n",
-       "QDA                    0.504944         0.555263   \n",
-       "Random Forest          0.515491         0.565789   \n",
-       "XGBoost                0.512195             0.55   \n",
+       "Logistic Regression    0.512854         0.568421   \n",
+       "LDA                    0.510218         0.557895   \n",
+       "QDA                    0.510218         0.536842   \n",
+       "Random Forest          0.511536         0.555263   \n",
+       "XGBoost                0.509558         0.557895   \n",
        "\n",
        "                                                                 model  \n",
        "Logistic Regression  LogisticRegressionCV(Cs=10, class_weight=None,...  \n",
@@ -702,7 +696,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For the best Model, Logistic Regression, the test accuracy is 0.609\n"
+      "For the best Model, Logistic Regression, the test accuracy is 0.594\n"
      ]
     }
    ],
