updated advanced model

--- a/models/advanced_model.ipynb
+++ b/models/advanced_model.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 410,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\shengsiong\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -16,6 +25,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
     "from predict_test_data import predict_test_data\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
@@ -29,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +282,7 @@
        "[5 rows x 55 columns]"
       ]
      },
-     "execution_count": 412,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +323,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 413,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 414,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,16 +389,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#X = train.drop(['home_win', 'game_date', 'home_team', \n",
-    "#                'away_team', 'home_score', 'away_score',\n",
-    "#                'tournament', 'country', 'neutral'], axis=1)\n",
-    "#y = train['home_win']\n",
+    "X = train.drop(['home_win', 'game_date', 'home_team', \n",
+    "                'away_team', 'home_score', 'away_score',\n",
+    "                'tournament', 'country', 'neutral'], axis=1)\n",
+    "y = train['home_win']\n",
     "\n",
-    "#columns_full = X.columns.values"
+    "columns_full = X.columns.values"
    ]
   },
   {
@@ -534,6 +544,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Selection with RFECV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_selection import RFECV\n",
+    "from sklearn.svm import SVR\n",
+    "estimator = SVR(kernel=\"linear\")\n",
+    "selectrfcev = RFECV(estimator, step=1, cv=5)\n",
+    "selectrfcev = selector.fit(X, y)\n",
+    "selectrfcev.support_ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selectrfcev = selector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_rfecv = columns_full[selectrfcev.get_support(indices=True)].tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Selection with Forward Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 415,
    "metadata": {},
@@ -589,6 +652,7 @@
     "lr_mod = LogisticRegressionCV(solver = 'lbfgs', \n",
     "                              max_iter = 5000, \n",
     "                              cv = 5, \n",
+    "                              penalty = 'l1',\n",
     "                              multi_class='multinomial').fit(X_train, y_train)"
    ]
   },
@@ -1006,8 +1070,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.decomposition import PCA\n"
    ]
   },
   {
@@ -1393,7 +1456,7 @@
    "outputs": [],
    "source": [
     "from sklearn.cross_decomposition import PLSRegression\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "\n",
     "\n",
     "plsda_train_score = []\n",
     "plsda_valid_score = []\n",
@@ -1457,7 +1520,7 @@
    "outputs": [],
    "source": [
     "# check test accuracy\n",
-    "plsda_best_mod = PLSRegression(n_components=plsr_best_com, scale=False) \n",
+    "plsda_best_mod = PLSRegression(n_components=plsda_best_com, scale=False) \n",
     "plsda_best_mod.fit(X_train_scaled, y_train_lb)\n",
     "\n",
     "plsda_best_test_pred = [np.where(np.argsort(val) == 1)[0][0]-1 if (i==1) & (np.argmax(val) == 1) \n",
